common/dynaql/src/registry/resolvers/graphql/snapshots/dynaql__registry__resolvers__graphql__serializer__tests__inline_fragment@query { ... @include(if: $foo) { bar } }.snap
---
source: common/dynaql/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... @include(if: $foo) {
		bar
	}
}

