common/dynaql/src/registry/resolvers/graphql/snapshots/dynaql__registry__resolvers__graphql__serializer__tests__inline_fragment@query { ... on Foo { bar baz } }.snap
---
source: common/dynaql/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... on Foo {
		__typename
		bar
		baz
	}
}

